[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tistory-newsroom"
version = "0.1.0"
description = "Daily, review-first Tistory newsroom draft automation"
requires-python = ">=3.11"
dependencies = ["Pillow>=10.0.0,<12"]

[project.scripts]
tistory-newsroom = "tistory_newsroom.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
